--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,5 +1,3 @@
-This page contains the description of the problem
-
 = Introduction =
 
 This page contains the description of the problem
@@ -11,21 +9,21 @@ Consider a single large text file F and a system that consists of N computer
 nodes. Split the file F into M fragments F_1, F_2, … , F_M and place them at various 
 nodes of the system. Place each fragment at one or more nodes (that means that you 
 should replicate some of the fragments). The fragments may not all have the same 
-size. Perform the following computational tasks: 
+size. 
+Perform the following computational tasks: 
  
 1. Find the longest word in F and store it at all the nodes. [100 Points] 
-2. For specific word(s) find in which nodes this/those word(s) is/are stored. Start 
-this task at node 1, with the user specifying the word(s). [150 Points] 
-3. Find the most frequent word in the text file F and store it at node 1. [200 
-Points] 
+2. For specific word(s) find in which nodes this/those word(s) is/are stored. Start this task at node 1, with the user specifying the word(s). [150 Points] 
+3. Find the most frequent word in the text file F and store it at node 1. [200 Points] 
 4. Update the contents of fragment i at each node that may have a copy of it. 
+
 The update originates at node 1, with the user specifying the fragment 
 number. [100 Points]-(Optional for extra credits) 
  
  In doing these computations, our users are willing to trade-off accuracy for latency and communication costs. The highest accuracy for given latency and 
 communication costs is highly desired. 
  
-Expectations: 
+===Expectations:=== 
  Design and develop a distributed application that performs these 
 computational tasks. Your solution must utilize gossip and be robust, efficient, and 
 effective at solving the problem(s) at hand. Your application should be implemented 
@@ -38,7 +36,7 @@ thoughtful experimental analysis of the effectiveness and efficiency of your sol
 to the problem. You should conduct experiments with varying large number of nodes 
 N, which are assigned to/instantiated at least two networked virtual machines. 
  
-Submission Procedure: 
+===Submission Procedure:=== 
  Due date: 11:59pm on Wednesday , 12/04/13 
  This is a group project 
  Write the names of each member of the group in the report. 
