Edited wiki page Links through web user interface.

--- a/wiki/Links.wiki
+++ b/wiki/Links.wiki
@@ -11,3 +11,7 @@ http://www.erlang.org/doc/reference_manual/distributed.html
 Mnesa distributed database
 
 http://21ccw.blogspot.com/2008/04/getting-started-with-distributed-erlang.html
+
+Some good erlang example
+
+http://learnyousomeerlang.com/recursion
