--- a/wiki/Links.wiki
+++ b/wiki/Links.wiki
@@ -15,3 +15,7 @@ http://21ccw.blogspot.com/2008/04/getting-started-with-distributed-erlang.html
 Some good erlang example
 
 http://learnyousomeerlang.com/recursion
+
+erland compiler:
+
+http://www.erlang.org/download.html
